--- a/index.html
+++ b/index.html
@@ -845,8 +845,7 @@
           <div class="card-body" style="color: black">
             <h5 class="card-title">SPECIAL FOR YOU</h5>
             <p class="card-text">
-              Hai, saya buat folder drive tentang kamu yang bakal saya update
-              terus setiap bulan nya
+              Hai, saya buat folder drive tentang kamu, semoga kamu suka ya!!
             </p>
             <a
               href="https://bit.ly/SpecialFolderForNeyo"
