--- a/index.html
+++ b/index.html
@@ -855,6 +855,25 @@
           </div>
         </div>
       </div>
+      <div class="content">
+        <div class="card border-dark text-center d-block">
+          <div class="card-body" style="color: black">
+            <h5 class="card-title">NEYO'S 18 Y.O BIRTHDAY</h5>
+            <p class="card-text">
+              Special Gift khusus ulang tahun neyo ke 18 tahun
+            </p>
+            <a style="background-color: antiquewhite; color: brown;"
+              href="https://nabiilnurysr.github.io/neyo18-birthday/"
+              class="btn btn-success"
+              >CAKE FOR U 🎂</a
+            >
+            <a style="background-color: brown; color: antiquewhite;"
+              href="https://nabiilnurysr.github.io/love-games/"
+              class="btn btn-success"
+              >LOVE LETTER FOR U 💌</a
+          </div>
+        </div>
+      </div>
     </section>
     <!-- End WishWord Section -->
 
